<resources>
    <string name="app_name">Размени Книга</string>
    <string name="login_title">Добредојдовте во Размени Книга</string>
    <string name="login_email">Најави се со Е-мејл</string>
    <string name="login_google">Најави се со Google</string>
    <string name="login_facebook">Најави се со Facebook</string>
    <string name="login_anonymous">Продолжи како Гостин</string>
    <string name="email_hint">Е-мејл адреса</string>
    <string name="password_hint">Лозинка</string>
    <string name="btn_login">Најава</string>
    <string name="btn_register">Регистрација</string>
    <string name="error_fields">Ве молиме пополнете ги сите полиња</string>
    <string name="login_success">Успешна најава!</string>
    <string name="login_failed">Неуспешна најава. Обидете се повторно.</string>
    <string name="register_link">Немате профил? Регистрирај се</string>
    <string name="nav_catalog">Каталог</string>
    <string name="nav_favorites">Омилени</string>
    <string name="nav_notifications">Известувања</string>
    <string name="nav_profile">Профил</string>
    <string name="btn_send_offer">Испрати понуда</string>
    <string name="btn_add_favorites">Додај во омилени</string>
    <string name="btn_accept">Прифати</string>
    <string name="btn_reject">Одбиј</string>
    <string name="offer_sent">Понудата е успешно испратена!</string>
    <string name="exchange_accepted">Размената е прифатена!</string>
    <string name="exchange_rejected">Размената е одбиена.</string>
    <string name="notifications_title">Известувања за размени</string>
    <string name="no_phone">Корисникот нема внесено телефон.</string>
    <string name="viber_not_installed">Viber не е инсталиран на уредот.</string>
    <string name="title_book">Понуда за: Наслов на книга</string>
    <string name="trade_book">Сака да ја замени својата книга со вашата.</string>
    <string name="book_image">Слика од книга</string>
    <string name="book_title">Наслов на Книга</string>
    <string name="book_author">Автор</string>
    <string name="condition_exelent">Состојба: Одлична</string>
    <string name="delete_favorites">Избриши од омилени</string>
    <string name="accept">Прифати</string>
    <string name="deny">Одбиј</string>
    <string name="backTo_login">Назад кон најава</string>
    <string name="signUp">Регистрирај се</string>
    <string name="confirm_password">Потврди лозинка</string>
    <string name="password">Лозинка</string>
    <string name="phone_number">Телефонски број (пр. 38971234567)</string>
    <string name="email">Е-мејл адреса</string>
    <string name="create_profile">Креирај профил</string>
    <string name="log_out">Одјави се</string>
    <string name="my_books">Мои книги:</string>
    <string name="user_email">Емаил на корисникот</string>
    <string name="take_picture">Сликај</string>
    <string name="send_offer">Испрати понуда</string>
    <string name="book_condition">Состојба на книгата</string>
    <string name="city">Град</string>
    <string name="your_name">Твоето име</string>
    <string name="choose_picture">Избери слика</string>
    <string name="trade_notification">Известувања за размени</string>
    <string name="ifNoProfile_signUp">Немате профил? Регистрирај се</string>
    <string name="my_favorite_books">Мои Омилени Книги</string>
    <string name="post_book">Објави ја Книгата</string>
    <string name="from_gallery">Од Галерија</string>
    <string name="picture_camera">Сликај со Камера</string>
    <string name="name_or_phone_forContact">Вашето име или телефон за контакт</string>
    <string name="type_city">Внесете град (на пр. Скопје, Битола...)</string>
    <string name="publisher">Издавачка куќа</string>
    <string name="author">Автор</string>
    <string name="add_book_trade">Додај Книга за Размена</string>
    <string name="typeHere_search">Впиши тука за пребарување...</string>
    <string name="available_books_trade">Достапни Книги за Размена</string>
    <string name="offer_send">Испрати понуда</string>
    <string name="favorites">Во Омилени</string>
    <string name="contact">Контакт: Стефан</string>
    <string name="town">Град: Скопје</string>
    <string name="condition">Состојба: Нова</string>
    <string name="publisher_house">Издавач: Куќа</string>
    <string name="author_name">Автор: Име на Авторот</string>
    <string name="book_pic">Слика од книгата</string>
    <string name="book_details">Детали за книгата</string>
    <string name="viber_notdownload">Viber не е инсталиран на уредот.</string>
    <string name="check_notifications">Провери ги твоите нотификации.</string>
    <string name="offer_approved">Понудата е прифатена!</string>
    <string name="offer_denied">Понудата е одбиена.</string>
    <string name="denyied_offer">Размената е одбиена.</string>
    <string name="user_no_phone">Корисникот нема внесено телефон.</string>
    <string name="book">Книга: %1$s</string>
    <string name="offer_for">Понуда за: %1$s</string>
    <string name="error">Грешка: %1$s</string>
    <string name="error_save_data">Грешка при зачувување на податоците!</string>
    <string name="register_sucess">Регистрацијата е успешна!</string>
    <string name="minSign_password">Лозинката мора да има минимум 6 знаци!</string>
    <string name="password_nomatch">Лозинките не се совпаѓаат!</string>
    <string name="phone_format">Бројот мора да биде во формат +389XXXXXXXX (11 знаци вкупно)!</string>
    <string name="fill_all_fields">Пополни ги сите полиња!</string>
    <string name="not_logged">Ненајавен</string>
    <string name="error_loading">Грешка при вчитување: %1$s</string>
    <string name="error_base">Грешка во база: %1$s</string>
    <string name="offer_send_success">Понудата е успешно испратена!</string>
    <string name="error_attaching">Грешка при качување: %1$s</string>
    <string name="send">Испрати</string>
    <string name="sending">Се испраќа...</string>
    <string name="reciever_not_found">Грешка: Примачот не е пронајден!</string>
    <string name="not_logged_in">Не си логиран!</string>
    <string name="denied_offer">Размената е одбиена.</string>
    <string name="accepted_offer">Размената е прифатена!</string>
    <string name="google_error">Грешка при Google логин.</string>
    <string name="guest_error">Грешка при најава како гост.</string>
    <string name="guest_logged">Влеговте како Гост!</string>
    <string name="signup">Регистрирај се</string>
    <string name="signupp">Регистрирај се</string>
    <string name="noprofile">Немате профил? Регистрирај се</string>
    <string name="google_login_error">Google логин неуспешен: %1$s</string>
    <string name="falinka">ФАЛИНКА: %1$s</string>
    <string name="bood_added">УСПЕХ: Книгата е во базата!</string>
    <string name="pls_add_pic">Ве молиме додадете и слика од книгата!</string>
    <string name="fields_fill">Пополнете ги сите полиња</string>
    <string name="n">Нова</string>
    <string name="s">Добро сочувана</string>
    <string name="o">Оштетена</string>
    <string name="new_book_add">Додај нова книга</string>
    <string name="nn">Нова</string>
    <string name="loading_error">Грешка при вчитување: %1$s</string>
    <string name="cathalouge">Веќе сте во Каталогот</string>
    <string name="search_on">Пребарај по %1$s...</string>
    <string name="book_in_fav">Книгата е додадена во твоите Омилени!</string>
    <string name="athor">Автор: %1$s</string>
    <string name="pblshr">Издавач: %1$s</string>
    <string name="cndtn">Состојба: %1$s</string>
    <string name="twn">Град: %1$s</string>
    <string name="cnct">Контакт: %1$s</string>
    <string name="ttl">Наслов</string>
    <string name="athr">Автор</string>
    <string name="cndtion">Состојба</string>
    <string name="cty">Град</string>
    <string name="titl">Наслов</string>
    <string name="authr">Автор</string>
    <string name="condtn">Состојба</string>
    <string name="cityy">Град</string>
    <string name="trying_save">Се обидувам да зачувам...</string>
    <string name="tlt">Наслов</string>
    <string name="sd">Испрати</string>
    <string name="unknown_t">Непознат наслов</string>
    <string name="unknown_a">Непознат автор</string>
    <string name="nnn">Нова</string>
</resources>